# backlight-pi

./: .gitignore  LICENSE  README.md  calibration.py  image_controller.py  led_controller.py  main.py  print_camera_controls.py  requirements.txt  setup.py  setup_camera.py  user_pref.py  utils.py
camera_control_webpage/: camera_controller.py
camera_control_webpage/static/scripts/: index.js
camera_control_webpage/static/styles/: index.css
camera_control_webpage/templates/: index.html
docs/: calibration.md
python/: README.md  calibration.py  led_controller.py  pin_to_pin.py  setup_camera.py  user_pref.py
python/camera_control_webpage/: camera_controller.py  main.py
rust/: Cargo.toml  README.md
rust/src/: camera_controller.rs  common.rs  led_controller.rs  main.rs  power_controller.rs  user_config.rs
